--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,14 +8,22 @@
 }
 
 .logo_position {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  @media screen and (min-width: 768px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 93px;
+  }
 }
 
-.logo_theme_light {
+.logo_theme-light {
   color: #000000;
 }
-.logo_theme_dark {
+.logo_theme-dark {
   color: var(--text-color-dark-terms);
 }
