--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,17 +1,19 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  // padding-top: 94px;
+  // padding-bottom: 94px;
 }
 
-.section__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: var(--secondary-text-color);
-}
+// .section__title {
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 1.17;
+//   letter-spacing: 0.03em;
+//   text-align: center;
+//   color: var(--secondary-text-color);
+// }
 
-.section_theme_dark {
+.section_theme-dark {
   background-color: #f5f4fa;
 }
