--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/section";
 @import "./base/container";
 
+@import "./components/mobile-menu";
 @import "./components/header";
 @import "./components/logo";
 @import "./components/nav-menu";
