--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,7 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     width: 480px;
     margin-left: auto;
     margin-right: auto;
