--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,99 +17,99 @@
   padding: 0;
   background-color: transparent;
 }
-// .page-header {
-//   background-color: #ffffff;
-//   border-bottom: 1px solid #ececec;
-// }
-// @media screen and (min-width: 768px) {
-//   .page-header_line {
-//     display: flex;
-//     align-items: center;
-//   }
-// }
+.page-header {
+  background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
+}
+@media screen and (min-width: 768px) {
+  .page-header_line {
+    display: flex;
+    align-items: center;
+  }
+}
 
-// .header-contacts {
-//   // display: flex;
-//   margin-left: auto;
-// }
+.header-contacts {
+  // display: flex;
+  margin-left: auto;
+}
 
-// .contact:not(:last-child) {
-//   margin-right: 50px;
-// }
+.contact:not(:last-child) {
+  margin-right: 50px;
+}
 
-// .contact__item {
-//   // display: flex;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--primery-text-color);
-//   align-items: center;
-//   transition-property: color, fill;
-//   transition-duration: var(--transform-durac);
-//   transition-timing-function: var(--transition-func);
+.contact__item {
+  // display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
+  align-items: center;
+  transition-property: color, fill;
+  transition-duration: var(--transform-durac);
+  transition-timing-function: var(--transition-func);
 
-//   &:hover,
-//   &:focus {
-//     fill: currentColor;
-//     color: var(--accent-color);
-//   }
-// }
+  &:hover,
+  &:focus {
+    fill: currentColor;
+    color: var(--accent-color);
+  }
+}
 
-// .contact__icon {
-//   fill: currentColor;
+.contact__icon {
+  fill: currentColor;
 
-//   .contact__item & {
-//     margin-right: 10px;
-//   }
-// }
-// @media screen and (min-width: 768px) {
-//   .nav-menu {
-//     display: flex;
-//   }
-// }
+  .contact__item & {
+    margin-right: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav-menu {
+    display: flex;
+  }
+}
 
-// .nav-menu__item {
-//   position: relative;
-//   &:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+.nav-menu__item {
+  position: relative;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
+}
 
-// .nav-menu__link,
-// .contact__item {
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-// }
+.nav-menu__link,
+.contact__item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 
-// .nav-menu__link {
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--secondary-text-color);
-//   transition: color;
-//   transition-duration: var(--transform-durac);
-//   transition-timing-function: var(--transition-func);
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
-// .nav-menu__link_active {
-//   position: relative;
-//   color: var(--accent-color);
-// }
-// @media screen and(min-width:768px) {
-//   .nav-menu__link_active::after {
-//     content: "";
-//     position: absolute;
-//     left: 0;
-//     bottom: 0;
-//     width: 100%;
-//     height: 4px;
-//     display: block;
-//     background-color: var(--accent-color);
-//     border-radius: 2px;
-//   }
-// }
+.nav-menu__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  transition: color;
+  transition-duration: var(--transform-durac);
+  transition-timing-function: var(--transition-func);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.nav-menu__link_active {
+  position: relative;
+  color: var(--accent-color);
+}
+@media screen and(min-width:768px) {
+  .nav-menu__link_active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    display: block;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+}
