--- a/css/main.css
+++ b/css/main.css
@@ -74,13 +74,12 @@ button {
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  background: tomato;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
     width: 480px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 768px) {
@@ -94,18 +93,75 @@ button {
   }
 }
 
+.mobile-menu {
+  background-color: teal;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 90;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity var(--transform-durac) var(--transition-func), visibility var(--transform-durac) var(--transition-func);
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu__container {
+  position: relative;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 25px;
+}
+
+.mobile-menu_close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .navigation,
+.header-contacts {
+    display: none;
+  }
+}
+.page-header_line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobile-menu_open {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  background-color: transparent;
+}
+
 .page-header {
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
 }
 
-.page-header_line {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .page-header_line {
+    display: flex;
+    align-items: center;
+  }
 }
-
 .header-contacts {
-  display: flex;
   margin-left: auto;
 }
 
@@ -114,7 +170,6 @@ button {
 }
 
 .contact__item {
-  display: flex;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -137,6 +192,56 @@ button {
   margin-right: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .nav-menu {
+    display: flex;
+  }
+}
+.nav-menu__item {
+  position: relative;
+}
+.nav-menu__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav-menu__link,
+.contact__item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.nav-menu__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  transition: color;
+  transition-duration: var(--transform-durac);
+  transition-timing-function: var(--transition-func);
+}
+.nav-menu__link:hover, .nav-menu__link:focus {
+  color: var(--accent-color);
+}
+
+.nav-menu__link_active {
+  position: relative;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .nav-menu__link_active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    display: block;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+}
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -170,53 +275,6 @@ button {
 
 .logo_theme-dark {
   color: var(--text-color-dark-terms);
-}
-
-.nav-menu {
-  display: flex;
-}
-
-.nav-menu__item {
-  position: relative;
-}
-.nav-menu__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.nav-menu__link,
-.contact__item {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.nav-menu__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  transition: color;
-  transition-duration: var(--transform-durac);
-  transition-timing-function: var(--transition-func);
-}
-.nav-menu__link:hover, .nav-menu__link:focus {
-  color: var(--accent-color);
-}
-
-.nav-menu__link_active {
-  position: relative;
-  color: var(--accent-color);
-}
-.nav-menu__link_active::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  display: block;
-  background-color: var(--accent-color);
-  border-radius: 2px;
 }
 
 .hero {
