--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -5,14 +5,14 @@
   // padding-bottom: 94px;
 }
 
-// .section__title {
-//   font-weight: 700;
-//   font-size: 36px;
-//   line-height: 1.17;
-//   letter-spacing: 0.03em;
-//   text-align: center;
-//   color: var(--secondary-text-color);
-// }
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
 
 .section_theme-dark {
   background-color: #f5f4fa;
