--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,10 +5,12 @@
   }
 }
 
-.page-header_line {
+.page-header__container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  @media screen and(max-width:767px) {
+    justify-content: space-between;
+  }
 }
 
 .mobile-menu_open {
@@ -16,16 +18,6 @@
   height: 40px;
   padding: 0;
   background-color: transparent;
-}
-.page-header {
-  background-color: #ffffff;
-  border-bottom: 1px solid #ececec;
-}
-@media screen and (min-width: 768px) {
-  .page-header_line {
-    display: flex;
-    align-items: center;
-  }
 }
 
 .header-contacts {
