--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,11 +1,11 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  @media screen and (max-width: 767px) {
-    width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  // @media screen and (max-width: 767px) {
+  width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+
   @media screen and (min-width: 768px) {
     width: 768px;
   }
