--- a/css/main.css
+++ b/css/main.css
@@ -99,13 +99,12 @@ button {
 }
 
 .mobile-menu {
-  background-color: teal;
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 90;
+  z-index: 110;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -123,6 +122,7 @@ button {
   padding-top: 48px;
   padding-bottom: 48px;
   padding-left: 25px;
+  background-color: teal;
 }
 
 .mobile-menu_close {
@@ -276,9 +276,9 @@ button {
   padding-bottom: 200px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1600px;
   background: rgba(47, 48, 58, 0.4);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../image/bg/bgpicture.jpg");
+  width: 480px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../image/hero/hero-mobile.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
