--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,17 +4,15 @@
   margin-left: auto;
   margin-right: auto;
   background: rgba(47, 48, 58, 0.4);
-
-  width: 480px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 480px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url("../../image/hero/hero-mobile.jpg");
-
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .hero__title {
