--- a/css/main.css
+++ b/css/main.css
@@ -83,9 +83,14 @@ button {
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  width: 480px;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -97,7 +102,6 @@ button {
     width: 1200px;
   }
 }
-
 .mobile-menu {
   position: fixed;
   width: 100%;
@@ -277,11 +281,11 @@ button {
   margin-left: auto;
   margin-right: auto;
   background: rgba(47, 48, 58, 0.4);
-  width: 480px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../image/hero/hero-mobile.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  max-width: 480px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../image/hero/hero-mobile.jpg");
 }
 
 .hero__title {
