--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,7 +12,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../../image/hero/hero-mobile.jpg");
+    url("../image/hero/hero-mobile.jpg");
 }
 
 .hero__title {
