--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,7 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   max-width: 480px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../image/hero/hero-mobile.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../image/hero/hero-mobile.jpg");
 }
 
 .hero__title {
