--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -14,7 +14,26 @@
     ),
     url("../image/hero/hero-mobile.jpg");
 }
-
+@media screen and(min-width:768px) {
+  .hero {
+    max-width: 768px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../image/hero/hero-tablet.jpg");
+  }
+}
+@media screen and(min-width:1200px) {
+  .hero {
+    max-width: 1200px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../image/hero/hero-desctop.jpg");
+  }
+}
 .hero__title {
   font-weight: 900;
   font-size: 44px;
