--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -13,6 +13,7 @@
   @media screen and (min-width: 768px) {
     padding-top: 26px;
     padding-bottom: 26px;
+    margin-right: 87px;
   }
   @media screen and (min-width: 1200px) {
     padding-top: 24px;
