--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -17,11 +17,18 @@
     display: none;
   }
 }
+.mobile-menu_open {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  background-color: transparent;
+}
 .is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
 }
+
 .mobile-menu__container {
   position: relative;
   padding-top: 48px;
