--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,12 @@ button {
   fill: currentColor;
 }
 .contact__mail .contact__icon, .contact__phone .contact__icon {
-  margin-right: 10px;
+  margin-right: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .contact__mail .contact__icon, .contact__phone .contact__icon {
+    margin-right: 10px;
+  }
 }
 
 @media screen and (min-width: 768px) {
