--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -63,7 +63,10 @@
 
   .contact__mail &,
   .contact__phone & {
-    margin-right: 10px;
+    margin-right: 8px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 10px;
+    }
   }
 }
 @media screen and (min-width: 768px) {
