--- a/css/main.css
+++ b/css/main.css
@@ -424,14 +424,40 @@ button {
   background-color: #188ce8;
 }
 
-.distinctive-list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .advantage {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
-
-.distinctive:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .advantage {
+    flex-wrap: nowrap;
+  }
 }
-.distinctive__title {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantage__item {
+    width: 354px;
+  }
+  .advantage__item:nth-child(2n-1) {
+    margin-right: 20px;
+  }
+  .advantage__item:nth-child(1) {
+    margin-bottom: 30px;
+  }
+  .advantage__item:nth-child(2) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantage__item {
+    flex-wrap: nowrap;
+  }
+  .advantage__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+.advantage__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -440,8 +466,10 @@ button {
   color: var(--secondary-text-color);
   margin-bottom: 10px;
 }
-.distinctive__block {
+
+.advantage__block {
   display: flex;
+  width: 100%;
   height: 120px;
   justify-content: center;
   align-items: center;
@@ -449,11 +477,13 @@ button {
   background-color: #f5f4fa;
   border-radius: 4px;
 }
-.distinctive__icon {
+
+.advantage__icon {
   width: 70px;
   height: 70px;
 }
-.distinctive__text {
+
+.advantage__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
