--- a/sass/components/_distinctive.scss
+++ b/sass/components/_distinctive.scss
@@ -12,6 +12,12 @@
     }
   }
 }
+@media screen and(max-width:767px) {
+  .advantage__item {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and(min-width:768px) and (max-width: 1199px) {
   .advantage__item {
     width: 354px;
@@ -43,6 +49,9 @@
   text-transform: uppercase;
   color: var(--secondary-text-color);
   margin-bottom: 10px;
+  @media screen and(max-width:767px) {
+    text-align: center;
+  }
 }
 
 .advantage__block {
