--- a/sass/components/_engage.scss
+++ b/sass/components/_engage.scss
@@ -1,34 +1,41 @@
 .what-engage {
-  padding-top: 0;
+  display: none;
 }
 
-.engage {
-  position: relative;
-  &:not(:last-child) {
-    margin-right: 30px;
+@media screen and(min-width:1200px) {
+  .what-engage {
+    display: block;
+    padding-top: 0;
   }
-  &-list {
-    display: flex;
-  }
-  &__inform {
-    align-items: center;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--text-color-dark-terms);
-    position: absolute;
-    display: flex;
-    height: 70px;
-    justify-content: center;
-    width: 100%;
-    bottom: 0;
-    z-index: 1;
-    background-color: rgba(47, 48, 58, 0.8);
-  }
-}
 
-.container .section__title {
-  margin-bottom: 50px;
+  .engage {
+    position: relative;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+    &-list {
+      display: flex;
+    }
+    &__inform {
+      align-items: center;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: var(--text-color-dark-terms);
+      position: absolute;
+      display: flex;
+      height: 70px;
+      justify-content: center;
+      width: 100%;
+      bottom: 0;
+      z-index: 1;
+      background-color: rgba(47, 48, 58, 0.8);
+    }
+  }
+
+  .container .section__title {
+    margin-bottom: 50px;
+  }
 }
