--- a/sass/components/_employees.scss
+++ b/sass/components/_employees.scss
@@ -1,9 +1,11 @@
-.employees-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-}
 .employee {
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+.employee__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
