--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -7,11 +7,17 @@
 
 .section__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--secondary-text-color);
+  margin-bottom: 30px;
+  @media screen and(min-width:1200px) {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .section_theme-dark {
