--- a/sass/components/_employees.scss
+++ b/sass/components/_employees.scss
@@ -10,10 +10,18 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+  @media screen and(max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
 }
 .employee__content {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+  @media screen and(min-width:1200px) {
+    padding-bottom: 30px;
+  }
 }
 .employee__name {
   font-weight: 500;
