--- a/css/main.css
+++ b/css/main.css
@@ -69,11 +69,19 @@ button {
 
 .section__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--secondary-text-color);
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .section__title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .section_theme-dark {
@@ -534,9 +542,6 @@ button {
     z-index: 1;
     background-color: rgba(47, 48, 58, 0.8);
   }
-  .container .section__title {
-    margin-bottom: 50px;
-  }
 }
 @media screen and (min-width: 768px) {
   .employee {
@@ -551,10 +556,20 @@ button {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
+@media screen and (max-width: 767px) {
+  .employee__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
 
 .employee__content {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 1200px) {
+  .employee__content {
+    padding-bottom: 30px;
+  }
 }
 
 .employee__name {
@@ -607,16 +622,27 @@ button {
   height: 20px;
 }
 
-.clients-list {
+.client {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 30px;
 }
 
-.client {
-  width: 170px;
+.client__item {
+  width: 210px;
   height: 92px;
+}
+@media screen and (min-width: 768px) {
+  .client__item {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__item {
+    width: 170px;
+  }
 }
 
 .client__link {
@@ -654,9 +680,17 @@ button {
   padding-bottom: 60px;
 }
 
-.footer__block {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 768px) {
+  .footer__block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__block {
+    align-items: baseline;
+  }
 }
 
 .footer__block_first {
@@ -681,6 +715,62 @@ button {
   text-transform: uppercase;
   color: var(--text-color-dark-terms);
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form {
+    display: flex;
+    height: 50px;
+  }
+}
+.subscribe-write {
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscribe-write-text {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+}
+
+.subscribe-add-mail {
+  background-color: transparent;
+  display: block;
+  width: 358px;
+  height: 100%;
+  border: none;
+  color: var(--text-color-dark-terms);
+  padding-left: 70px;
+  padding-right: 12px;
+  cursor: pointer;
+}
+
+.subscribe-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 100%;
+  margin-left: 12px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--text-color-dark-terms);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.subsribe-btn-icon {
+  width: 24px;
+  height: 24px;
+  fill: rgb(255, 255, 255);
+  margin-left: 10px;
 }
 
 .address {
@@ -730,62 +820,6 @@ button {
   width: 20px;
   height: 20px;
   fill: var(--text-color-dark-terms);
-}
-
-.subscribe-form {
-  display: flex;
-  height: 50px;
-}
-
-.subscribe-write {
-  position: relative;
-  width: 358px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-}
-
-.subscribe-write-text {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translateY(-50%);
-}
-
-.subscribe-add-mail {
-  background-color: transparent;
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: none;
-  color: var(--text-color-dark-terms);
-  padding-left: 70px;
-  padding-right: 12px;
-  cursor: pointer;
-}
-
-.subscribe-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 100%;
-  margin-left: 12px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--text-color-dark-terms);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-
-.subsribe-btn-icon {
-  width: 24px;
-  height: 24px;
-  fill: rgb(255, 255, 255);
-  margin-left: 10px;
 }
 
 .menu-filter {
