--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,8 +4,14 @@
   padding-bottom: 60px;
 }
 .footer__block {
-  display: flex;
-  align-items: baseline;
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  @media screen and(min-width:1200px) {
+    align-items: baseline;
+  }
 }
 .footer__block_first {
   margin-right: 70px;
@@ -26,4 +32,57 @@
   text-transform: uppercase;
   color: var(--text-color-dark-terms);
   margin-bottom: 20px;
+}
+@media screen and(min-width:1200px) {
+  .subscribe-form {
+    display: flex;
+    height: 50px;
+  }
+}
+
+.subscribe-write {
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.subscribe-write-text {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+}
+
+.subscribe-add-mail {
+  background-color: transparent;
+  display: block;
+  width: 358px;
+  height: 100%;
+  border: none;
+  color: var(--text-color-dark-terms);
+  padding-left: 70px;
+  padding-right: 12px;
+  cursor: pointer;
+}
+.subscribe-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 100%;
+  margin-left: 12px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--text-color-dark-terms);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.subsribe-btn-icon {
+  width: 24px;
+  height: 24px;
+  fill: rgb(255, 255, 255);
+  margin-left: 10px;
 }
