--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -42,9 +42,13 @@
 
 .subscribe-write {
   position: relative;
+  max-width: 450px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  @media screen and(min-width:1200px) {
+    width: 358px;
+  }
 }
 .subscribe-write-text {
   position: absolute;
@@ -56,13 +60,16 @@
 .subscribe-add-mail {
   background-color: transparent;
   display: block;
-  width: 358px;
-  height: 100%;
+  width: 100%;
+  height: 50px;
   border: none;
   color: var(--text-color-dark-terms);
   padding-left: 70px;
   padding-right: 12px;
   cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 .subscribe-btn {
   display: flex;
