--- a/css/main.css
+++ b/css/main.css
@@ -684,7 +684,7 @@ button {
   .footer__block {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -694,17 +694,24 @@ button {
 }
 
 .footer__block_first {
-  margin-right: 70px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer__block_first {
+    margin-right: 70px;
+  }
 }
 
-.footer__block_third {
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .footer__block_third {
+    margin-left: auto;
+  }
 }
 
 .footer__logo {
+  text-align: center;
   padding-top: 0;
   padding-bottom: 0;
-  margin-right: 0;
 }
 
 .footer__subtitle {
@@ -713,6 +720,7 @@ button {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
   color: var(--text-color-dark-terms);
   margin-bottom: 20px;
 }
@@ -723,12 +731,15 @@ button {
     height: 50px;
   }
 }
+
 .subscribe-write {
   position: relative;
   max-width: 450px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
+}
+@media screen and (min-width: 768px) {
+  .subscribe-write {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .subscribe-write {
@@ -760,6 +771,7 @@ button {
 
 .subscribe-btn {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 200px;
@@ -773,6 +785,12 @@ button {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+@media screen and (max-width: 767px) {
+  .subscribe-btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .subsribe-btn-icon {
