--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,22 +7,28 @@
   @media screen and(min-width:768px) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   @media screen and(min-width:1200px) {
     align-items: baseline;
   }
 }
+
 .footer__block_first {
-  margin-right: 70px;
+  text-align: center;
+  @media screen and(min-width:1200px) {
+    margin-right: 70px;
+  }
 }
 .footer__block_third {
-  margin-left: auto;
+  @media screen and(min-width:1200px) {
+    margin-left: auto;
+  }
 }
 .footer__logo {
+  text-align: center;
   padding-top: 0;
   padding-bottom: 0;
-  margin-right: 0;
 }
 .footer__subtitle {
   font-weight: 700;
@@ -30,11 +36,13 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
   color: var(--text-color-dark-terms);
   margin-bottom: 20px;
 }
-@media screen and(min-width:1200px) {
-  .subscribe-form {
+
+.subscribe-form {
+  @media screen and(min-width:1200px) {
     display: flex;
     height: 50px;
   }
@@ -43,9 +51,10 @@
 .subscribe-write {
   position: relative;
   max-width: 450px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
+  @media screen and(min-width:768px) {
+    width: 450px;
+  }
+
   @media screen and(min-width:1200px) {
     width: 358px;
   }
@@ -73,6 +82,7 @@
 }
 .subscribe-btn {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 200px;
@@ -86,6 +96,10 @@
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  @media screen and (max-width: 767px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .subsribe-btn-icon {
   width: 24px;
