--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -6,7 +6,10 @@
   margin-top: 20px;
 }
 .address__item + .address__item {
-  margin-top: 9px;
+  margin-top: 8px;
+  @media screen and(min-width:1200px) {
+    margin-top: 9px;
+  }
 }
 
 .address__map {
