--- a/css/main.css
+++ b/css/main.css
@@ -718,6 +718,12 @@ button {
 @media screen and (min-width: 768px) {
   .footer__block_second {
     margin-bottom: 0;
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__block_second {
+    margin-top: 0;
   }
 }
 
@@ -1015,11 +1021,16 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
+  width: 450px;
   padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .modal-close-btn {
@@ -1056,11 +1067,16 @@ button {
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    line-height: 1.15;
+  }
 }
 
 .caption-form {
@@ -1135,6 +1151,12 @@ button {
   letter-spacing: 0.03em;
   color: var(--primery-text-color);
   margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .agreed-license {
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 .agreed-license::before {
   content: " ";
