--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -30,6 +30,10 @@
   margin-bottom: 60px;
   @media screen and(min-width:768px) {
     margin-bottom: 0;
+    margin-top: 60px;
+  }
+  @media screen and(min-width:768px) {
+    margin-top: 0;
   }
 }
 .footer__block_third {
