--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -3,12 +3,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
+  width: 450px;
   padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and(min-width:1200px) {
+    width: 528px;
+  }
 }
 .modal-close-btn {
   position: absolute;
@@ -44,11 +47,14 @@
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   margin-bottom: 12px;
+  @media screen and(min-width:1200px) {
+    line-height: 1.15;
+  }
 }
 .caption-form {
   font-weight: 400;
@@ -120,6 +126,10 @@
   letter-spacing: 0.03em;
   color: var(--primery-text-color);
   margin-bottom: 30px;
+  @media screen and(min-width:1200px) {
+    font-size: 12px;
+    line-height: 1.17;
+  }
   &::before {
     content: " ";
     display: block;
