--- a/css/main.css
+++ b/css/main.css
@@ -718,18 +718,13 @@ button {
 @media screen and (min-width: 768px) {
   .footer__block_second {
     margin-bottom: 0;
-    margin-top: 60px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .footer__block_second {
-    margin-top: 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__block_third {
     width: 450px;
+    margin-top: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1021,7 +1016,7 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 450px;
+  max-width: 450px;
   padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
