--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -73,20 +73,14 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  gap: 10px;
 }
-.mobile-social__item {
-  &:not(:first-child) {
-    margin-left: 10px;
-  }
-  &:not(:last-child) {
-    &::after {
-      content: " ";
-      display: inline-block;
-      height: 22px;
-      border: 1px solid rgba(33, 33, 33, 0.2);
-      margin-left: 10px;
-    }
-  }
+.mobile-social__item:not(:last-child)::after {
+  content: " ";
+  display: inline-block;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
 }
 
 .mobile-social__link {
